# place-order-ms

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  env-configmap.yaml  place-order-ms-deployment.yaml  place-order-ms-service.yaml
.github/workflows/: docker-image.yml
src/: main.rs
src/actions/: mod.rs  order.rs
