[package]
name = "place-order-ms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tower = { version = "0.4.1", features = ["util", "timeout"] }
tower-http = { version = "0.2.5", features = ["trace"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
whoami = "1.2.1"